# rowspire

./: .cursorignore  .gitignore  .prettierignore  AGENTS.md  README.md  SECURITY.md  env.d.ts  eslint.config.mjs  index.html  instrumentation-client.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  sentry.server.config.ts  sentry.shared.config.ts  tsconfig.json  vite.config.ts  vite.sw.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: codeql.yml  deploy.yml
.husky/: pre-commit
docs/: AI-SYSTEM.md  ARCHITECTURE.md  BACKLOG.md
docs/diagrams/: README.md  ai-move-flow.dot  build-deploy-flow.dot  system-overview.dot
e2e/: audio.spec.ts  smoke.spec.ts
public/: _headers  browserconfig.xml  manifest.webmanifest  sitemap.xml
resources/ai/: evolved.json  ml_ai_weights_best.json
resources/conformance/: game-rules.json
scripts/: build-id.d.mts  build-id.mjs  check-branding.mjs  check-bundle-budget.mjs  check-diagrams.mjs  check-docs.mjs  check-generated-types.sh  convert_model_for_wasm.py  generate-sw.js  generate-types.sh  render-diagrams.mjs  smoke-production.mjs  test-ai-comparison.sh  test-wasm-loading.js
src/: App.tsx  main.tsx  service-worker.ts  worker.ts
src/app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  sitemap.ts
src/app/offline/: page.tsx
src/app/styles/: actions.css  board.css  celebration.css  foundation.css  game-ui.css  modal.css  responsive.css  selection.css  system-surfaces.css  update-prompt.css  utilities.css
src/components/: AISelectionCard.tsx  AISelectionPanel.tsx  AnimatedBackground.tsx  AppErrorBoundary.tsx  AppLinks.tsx  BrandHeader.tsx  DifficultySelector.tsx  ErrorModal.tsx  GameBoard.tsx  HowToPlayPanel.tsx  NetworkStatus.tsx  OfflinePage.tsx  OpponentDetailsModal.tsx  OpponentTechnicalContent.tsx  PWAInstallPrompt.tsx  RowspireGame.tsx  ServiceWorkerUpdate.tsx
src/components/animations/: VictoryCelebration.tsx  WinningLineBurst.tsx  WinningLineReveal.tsx
src/components/game/: DroppingPiece.tsx  GameColumn.tsx  GameCompletionOverlay.tsx  GameControls.tsx  GamePiece.tsx  GameSquare.tsx  GameStatus.tsx  game-icons.ts
src/hooks/: useAnimatedBackground.ts  useDismissOnEscape.ts  useGameAnimations.ts  useHydrated.ts  useThrottledValue.ts
src/lib/: ai-worker-client.ts  ai-worker-protocol.ts  ai.worker.ts  bindings.ts  brand.ts  canonical-host.ts  constants.ts  difficulty.ts  game-logic.ts  game-presentation.ts  game-state-machine.ts  game-store-ai-actions.ts  game-store-core.ts  game-store-state.ts  game-store.ts  ml-ai-worker-client.ts  ml-ai-worker-protocol.ts  observability.ts  opponents.ts  pwa-update-lifecycle.ts  schemas.ts  service-worker-policy.ts  sound-effects.ts  types.ts  ui-store.ts  usage.ts  utils.ts  wasm-ai-boundary.ts  wasm-ai-service.ts  winning-line-presentation.ts
src/lib/__tests__/: ai-logic.test.ts  ai-worker-client.test.ts  ai-worker-protocol.test.ts  ai-worker.test.ts  background-effects.test.ts  build-id.test.ts  canonical-host.test.ts  difficulty.test.ts  game-logic.test.ts  game-presentation.test.ts  game-state-invariants.test.ts  game-state-machine.test.ts  game-store-ports.test.ts  game-store.test.ts  ml-ai-worker-client.test.ts  ml-ai-worker-protocol.test.ts  ml-ai.test.ts  ml-ai.worker.test.ts  observability.test.ts  pwa-update-lifecycle.test.ts  rowspire.test.ts  schemas.test.ts  service-worker-policy.test.ts  setup.ts  shared-rules-conformance.test.ts  sound-effects.test.ts  ui-store.test.ts  usage.test.ts  utils.test.ts  wasm-ai-service.test.ts  winning-line-presentation.test.ts  worker.test.ts
src/lib/logic/: ai-logic.ts  board-logic.ts  (+1 more)
worker/: Cargo.toml
worker/.cargo/: config.toml
worker/src/: ai_types.rs  bitboard.rs  evaluation.rs  evaluation_lines.rs  feature_scores.rs  features.rs  features_tests.rs  game.rs  genetic_params.rs  lib.rs  main.rs  mcts.rs  mcts_node.rs  mcts_policy.rs  mcts_tests.rs  ml_ai.rs  ml_ai_tests.rs  ml_network.rs  ml_tactics.rs  ml_types.rs  network_layer.rs  network_training.rs  neural_network.rs  neural_network_tests.rs  rules.rs  search_ai.rs  solver.rs  wasm_api.rs
worker/tests/: ai_matrix_test.rs  bindings_test.rs  evaluation_test.rs  game_logic_test.rs  repro_endgame.rs  rules_conformance.rs  shared_rules_conformance.rs  simple_game_test.rs  solver_capability.rs  threat_detection_test.rs
(+5 files in other folders)
