[package]
name = "rowspire-ai-core"
version = "1.0.0"
edition = "2021"
authors = ["Robert Gilks"]
description = "Rowspire AI core logic"
license = "MIT"
repository = "https://github.com/tre-systems/rowspire"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rowspire-ai-worker"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["training"]

[features]
default = []
wasm = [
    "wasm-bindgen",
    "getrandom/js",
    "dep:serde-wasm-bindgen",
]
training = ["dep:chrono", "dep:rayon"]
slow_tests = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rand = { version = "0.8.5", features = ["getrandom"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
lazy_static = "1.4"
ndarray = "0.15"
chrono = { version = "0.4", features = ["serde"], optional = true }
rayon = { version = "1.8", optional = true }
ts-rs = "7.0.0"

[dev-dependencies]
criterion = "0.6.0"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev]
opt-level = 1
panic = "unwind"
