[package]
name = "rowspire-ai-core"
version = "1.0.0"
edition = "2021"
authors = ["Robert Gilks"]
description = "Rowspire AI core logic"
license-file = "LICENSE"
repository = "https://github.com/tre-systems/rowspire"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rowspire-ai-worker"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["training"]

[features]
default = []
wasm = [
    "wasm-bindgen",
    "getrandom/js",
    "dep:serde-wasm-bindgen",
]
training = ["dep:chrono", "dep:rayon"]
slow_tests = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
ndarray = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
rayon = { version = "1.8", optional = true }
ts-rs = "7.0.0"

[dev-dependencies]
rayon = "1.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
panic = "unwind"
